--- a/templates/chess.html
+++ b/templates/chess.html
@@ -12,7 +12,7 @@
 		<script src="https://cdn.tutorialjinni.com/chess.js/0.10.2/chess.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js"></script>
 		<script>
-			var socket = io.connect('http://' + document.domain + ':' + location.port);
+			var socket = io.connect('https://' + document.domain + ':' + location.port);
 		</script>
 		<style>
 			html, body {
